--- a/theme/templates/newbase.html
+++ b/theme/templates/newbase.html
@@ -28,8 +28,29 @@
     <link rel="stylesheet" type="text/css" href="/static/css/academicons.min.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/hydroshare_extends.css"/>
     <style>
+        .dropdown-toggle {
+        }
+        .dropdown-toggle:after {
+            display: none;
+        }
+        .navbar-fixed-top {
+            position: fixed;
+            right: 0;
+            left: 0;
+            top: 0;
+            border-width: 0 0 1px;
+        }
+        .navbar-header {
+            margin-left: -15px;
+            margin-right: -15px;
+        }
         .navbar {
-            max-height: 60px;
+            padding: 0;
+            min-height: 50px;
+            max-height: 50px;
+            margin-bottom: 20px;
+            margin-left: 0;
+            margin-right: 0;
         }
         .navbar-nav {
             display: block;
@@ -38,6 +59,8 @@
         #toplevel-nav-container {
             display: block;
             flex-wrap: nowrap;
+            margin-left: 0;
+            margin-right: 0;
         }
         #profile-menu .dropdown-menu {
             position: absolute;
