--- a/theme/templates/newbase.html
+++ b/theme/templates/newbase.html
@@ -16,7 +16,7 @@
 
 {#    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic" rel="stylesheet">#}
     <link rel="stylesheet" type="text/css" href="/static/css/hydroshare_fonts.css" rel="stylesheet"/>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"/>
+{#    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"/>#}
 {#    <link rel="stylesheet" type="text/css" href="/static/fonts/font-mfizz/font-mfizz.css"/>#}
 
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.3.0.2.min.css"/>
@@ -92,15 +92,15 @@
     {% inplace_static %}
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+{#    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>#}
+{#    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>#}
     <![endif]-->
     <!--[if IE]>
-    <style>
-        .showcase {
-            zoom: 0.6;
-        }
-    </style>
+{#    <style>#}
+{#        .showcase {#}
+{#            zoom: 0.6;#}
+{#        }#}
+{#    </style>#}
     <![endif]-->
 
     {% block extra_head %}{% endblock %}
