--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -11,9 +11,8 @@
                 <div class="alert alert-info" role="alert">
                     <p><span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="collapse"
                              data-target="#usage-info">&nbsp;</span>
-                        Use this window to share your resource with specific HydroShare users. You can give other
-                        users the ability to view or edit this resource. You can also add additional owners who
-                        will have full permissions.</p>
+                        Use this window to share your resource with specific HydroShare users or set its sharing status (Public, Discoverable, Private, Shareable).
+                        You can give other users the ability to view or edit this resource. You can also add additional owners who will have full permissions.</p>
                     <br>
 
                     <div id="usage-info" class="collapse">
