--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -203,10 +203,22 @@
                                         </label>
                                     </div>
 
-                                    <p v-if="resAccess.isShareable" class="text-muted small">
-                                        Uncheck the box to prevent others from sharing the resource
-                                        without the owner's permission.
-                                    </p>
+                                    <div v-if="resAccess.isShareable" class="text-muted small">
+                                        <ul>
+                                            <li>
+                                               <p>
+                                               Check the box to let others who have access to this resource be able to share
+                                               it with others at the same permission level (Edit or View) and enable adding to Collections.
+                                               </p>
+                                            </li>
+                                            <li>
+                                               <p>
+                                               Uncheck the box to prevent others from sharing the resource without the
+                                               owner’s permission, or from adding the resource to Collections before the resource is made Discoverable or Public.
+                                               </p>
+                                            </li>
+                                        </ul>
+                                    </div>
 
                                     <p v-else class="text-muted small">
                                         Check this box to allow others to share the resource without the
