--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -243,25 +243,31 @@
         <script src="{{ STATIC_URL }}js/dual-listbox.js"></script>
 
 
-        <form action="/hsapi/_internal/{{ cm.short_id }}/title/{{ cm.metadata.title.id }}/update-metadata/"
-              id="id-title" method="post">
-            {% csrf_token %}
-            <fieldset>
-                <div id="div_id_value" class="control-group">
-                    <div class="controls">
-                        <input class="form-control input-sm textinput textInput" id="txt-title"
-                                {% if czo_user %} onfocus="titleClick()" {% endif %}
-                               maxlength="300" name="value" type="text" value="{{ cm.metadata.title }}"/>
+        {% if not cm.raccess.published %}
+            <form action="/hsapi/_internal/{{ cm.short_id }}/title/{{ cm.metadata.title.id }}/update-metadata/"
+                  id="id-title" method="post">
+                {% csrf_token %}
+                <fieldset>
+                    <div id="div_id_value" class="control-group">
+                        <div class="controls">
+                            <input class="form-control input-sm textinput textInput" id="txt-title"
+                                    {% if czo_user %} onfocus="titleClick()" {% endif %}
+                                   maxlength="300" name="value" type="text" value="{{ cm.metadata.title }}"/>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <button type="button" id="title-save-button" class="btn btn-primary pull-right btn-form-submit"
-                            style="display: none;">
-                        Save changes
-                    </button>
-                </div>
-            </fieldset>
-        </form>
+                    <div>
+                        <button type="button" id="title-save-button" class="btn btn-primary pull-right btn-form-submit"
+                                style="display: none;">
+                            Save changes
+                        </button>
+                    </div>
+                </fieldset>
+            </form>
+        {% else %}
+             <div class="flex">
+                <h2 id="resource-title">{{ title }}</h2>
+             </div>
+        {% endif %}
     {% endif %}
 </div>
 
