--- a/theme/templates/newbase.html
+++ b/theme/templates/newbase.html
@@ -28,6 +28,15 @@
     <link rel="stylesheet" type="text/css" href="/static/css/academicons.min.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/hydroshare_extends.css"/>
     <style>
+        .page-title {
+            /* override hydroshare_core.css to address excessive bottom margin */
+            margin: 0;
+            margin-top: 10px;
+            font-weight: 500;
+            padding-bottom: 5px;
+            border-bottom: 1px solid #DDD;
+        }
+
         .dropdown-toggle {
         }
         .dropdown-toggle:after {
