--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1585,7 +1585,8 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                    <button id="btn-delete-resource" class="btn btn-danger">Delete</button>
+                                    <a type="button" class="btn btn-danger"
+                                       href="/hsapi/_internal/{{ cm.short_id }}/delete-resource/">Delete</a>
                                 </div>
                             </div>
                         </div>
@@ -1625,7 +1626,8 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button id="copy-btn" class="btn btn-success" disabled>Copy this resource</button>
+                                <a type="button" class="btn btn-success" id="copy-btn"
+                                   href="/hsapi/_internal/{{ cm.short_id }}/copy-resource/" disabled>Copy this resource</a>
                             </div>
                         </div>
                     </div>
@@ -1662,8 +1664,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-success" id="download-bag-btn"
-                   data-bag-url="{{ cm.bag_url }}" disabled>Download</button>
+                <a type="button" class="btn btn-success" id="download-bag-btn"
+                   href="{{ cm.bag_url }}" disabled>Download</a>
             </div>
         </div>
     </div>
